--- a/pcgrr/inst/templates/pcgr_flexdb_report.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb_report.Rmd
@@ -13,7 +13,6 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-library(magrittr)
 
 signatures_estimation <- 'ON'
 msi_prediction <- 'ON'
@@ -55,9 +54,6 @@ scrollY_flexdb_container <- "510px"
 ```{r conditional_overview, child='pcgr_flexdb/flexdb_snv_overview.Rmd', eval = pcg_report$content$snv_indel$eval}
 ```
 
-```{r conditional_overview, child='pcgr_flexdb/flexdb_variant_filter_stats.Rmd', eval = pcg_report$metadata$config$assay_props$vcf_tumor_only}
-```
-
 ```{r conditional_tier1, child='pcgr_flexdb/flexdb_snv_tier1.Rmd', eval = pcg_report$content$snv_indel$eval}
 ```
 
@@ -70,7 +66,7 @@ scrollY_flexdb_container <- "510px"
 ```{r conditional_tier4, child='pcgr_flexdb/flexdb_snv_tier4.Rmd', eval = pcg_report$content$snv_indel$eval}
 ```
 
-```{r conditional_noncoding, child='pcgr_flexdb/flexdb_snv_tier5.Rmd', eval = pcg_report$content$snv_indel$eval}
+```{r conditional_tier5, child='pcgr_flexdb/flexdb_snv_tier5.Rmd', eval = pcg_report$content$snv_indel$eval}
 ```
 
 ```{r conditional_biomarkers, child='pcgr_flexdb/flexdb_snv_biomarker.Rmd', eval = pcg_report$content$snv_indel$eval}
@@ -98,13 +94,6 @@ scrollY_flexdb_container <- "510px"
 ```
 
 ```{r conditional_mut_sigs, child='pcgr_flexdb/flexdb_mutsignatures.Rmd', eval = pcg_report$content$mutational_signatures$eval}
-```
-
-```{r conditional_cpsr, child='pcgr_flexdb/flexdb_cpsr.Rmd', eval = pcg_report$content$cpsr$eval}
-```
-
-
-```{r conditional_trials, child='pcgr_flexdb/flexdb_clinicaltrials.Rmd', eval = pcg_report$content$clinicaltrials$eval}
 ```
 
 ```{r conditional_doc, child='pcgr_flexdb/flexdb_documentation.Rmd', eval = T}
