--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_documentation.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_documentation.Rmd
@@ -5,69 +5,63 @@ Settings & Docs
 Row
 -------------------------------------
 
-### Settings - sample and report {data-padding=20}
+### Settings and report configuration {data-padding=20}
 
 ```{r get_VEP_transcript_set, echo=F,results='asis'}
 
-gencode_versions <- unlist(stringr::str_split_fixed(
-  stringr::str_replace(
-    pcg_report$metadata$pcgr_db_release$gencode$version,"release ",""),
-  "/", 2))[1,]
-  
-gencode_version <- gencode_versions[2]
-if(pcg_report[['metadata']][['genome_assembly']] == "grch38"){
-  gencode_version <- gencode_versions[1]
+gencode_version <- 
+  pcg_report$ref_data$metadata[pcg_report$ref_data$metadata$source_abbreviation == "gencode",]$source_version
+
+#gencode_version <- gencode_versions[2]
+if(pcg_report$settings$genome_assembly == "grch37"){
+  gencode_version <- 19
 }
 
-transcript_set_gencode <- paste0("GENCODE - basic set (v", gencode_version,")")
-if(pcg_report[['metadata']][['config']][['other']][['vep_gencode_all']] == T){
-  transcript_set_gencode <- paste0("GENCODE - all transcripts (v", gencode_version,")")
+transcript_set_gencode <- paste0("GENCODE - full transcript set (v", gencode_version,")")
+if(as.logical(pcg_report$settings$conf$vep[['vep_gencode_basic']]) == T){
+  transcript_set_gencode <- paste0("GENCODE - basic transcript set (v", gencode_version,")")
 }
 
 ```
 
-The report is generated with _[PCGR](https://github.com/sigven/pcgr)_  version `r pcg_report[['metadata']][['pcgr_version']]`.
+The report is generated with _[PCGR](https://github.com/sigven/pcgr)_  version `r pcg_report$settings$software$pcgr_version`.
 <br><br>
 Key report configuration settings:
 
-* Genome assembly: <b> __`r pcg_report[['metadata']][['genome_assembly']]`__ </b>
-* Minimum sequencing depth <b>tumor</b> (DP, SNV/InDel): <b> __`r pcg_report[['metadata']][['config']][['allelic_support']][['tumor_dp_min']]`__ </b>
-* Minimum allelic fraction <b>tumor</b> (VAF, SNV/InDel): <b> __`r pcg_report[['metadata']][['config']][['allelic_support']][['tumor_af_min']]`__ </b>
-* Minimum sequencing depth <b>control</b> (DP, SNV/InDel): <b> __`r pcg_report[['metadata']][['config']][['allelic_support']][['control_dp_min']]`__ </b>
-* Maximum allelic fraction <b>control</b> (VAF, SNV/InDel): <b> __`r pcg_report[['metadata']][['config']][['allelic_support']][['control_af_max']]`__ </b>
+* Genome assembly: <b> __`r pcg_report$settings$genome_assembly`__ </b>
+* Minimum sequencing depth <b>tumor</b> (DP, SNV/InDel): <b> __`r pcg_report$settings$conf$somatic_snv$allelic_support$tumor_dp_min`__ </b>
+* Minimum allelic fraction <b>tumor</b> (VAF, SNV/InDel): <b> __`r pcg_report$settings$conf$somatic_snv$allelic_support$tumor_af_min`__ </b>
+* Minimum sequencing depth <b>control</b> (DP, SNV/InDel): <b> __`r pcg_report$settings$conf$somatic_snv$allelic_support$control_dp_min`__ </b>
+* Maximum allelic fraction <b>control</b> (VAF, SNV/InDel): <b> __`r pcg_report$settings$conf$somatic_snv$allelic_support$control_af_max`__ </b>
 * Tier system (VCF): __pcgr_acmg__
-* Show noncoding variants: __`r pcg_report[['metadata']][['config']][['other']][['list_noncoding']]`__
+* Show noncoding variants: __`r pcg_report$settings$conf$other$show_noncoding`__
 * MSI prediction: <b> __`r msi_prediction`__ </b>
 * Mutational burden estimation: <b> __`r mutational_burden`__ </b>
-  * TMB algorithm: <b> __`r pcg_report[['metadata']][['config']][['tmb']][['algorithm']]`__ </b>
+  * TMB estimate shown in report: <b> __TMB_`r pcg_report$settings$conf$somatic_snv$tmb$tmb_display`__ </b>
 * Mutational signatures estimation: <b> __`r signatures_estimation`__ </b>
-  * Minimum number of mutations required: __`r pcg_report[['metadata']][['config']][['msigs']][['mutation_limit']]`__
-  * All reference signatures: <b> __`r pcg_report[['metadata']][['config']][['msigs']][['all_reference_signatures']]`__ </b>
-  * Inclusion of artefact signatures: <b> __`r pcg_report[['metadata']][['config']][['msigs']][['include_artefact_signatures']]`__ </b>
-  * Minimum tumor-type prevalence (percent) of reference signatures used for refitting: <b> __`r pcg_report[['metadata']][['config']][['msigs']][['prevalence_reference_signatures']]`__</b>
+  * Minimum number of mutations required: __`r pcg_report$settings$conf$somatic_snv$mutational_signatures$mutation_limit`__
+  * All reference signatures: <b> __`r as.logical(pcg_report$settings$conf$somatic_snv$mutational_signatures$all_reference_signatures)`__ </b>
+  * Inclusion of artefact signatures: <b> __`r as.logical(pcg_report$settings$conf$somatic_snv$mutational_signatures$include_artefact_signatures)`__ </b>
+  * Minimum tumor-type prevalence (percent) of reference signatures used for refitting: <b> __`r pcg_report$settings$conf$somatic_snv$mutational_signatures$prevalence_reference_signatures`__</b>
 * Clinical trial inclusion: <b> __`r trial_inclusion`__ </b>
 * Variant Effect Predictor (VEP) settings:
+  * Buffer size: __`r pcg_report$settings$conf$vep$vep_buffer_size`__
   * Transcript set: __`r transcript_set_gencode`__
-  * Transcript pick order: __`r pcg_report[['metadata']][['config']][['other']][['vep_pick_order']]`__
-  * Regulatory regions annotation: __`r pcg_report[['metadata']][['config']][['other']][['vep_regulatory']]`__
+  * Transcript pick order: __`r stringr::str_replace_all(pcg_report$settings$conf$vep$vep_pick_order,",",", ")`__
+  * Regulatory regions annotation: __`r as.logical(pcg_report$settings$conf$vep$vep_regulatory)`__
+
+
+### Sample and sequencing assay information {data-padding=20}
+
+* Assay sequencing type (VCF): <b> __`r pcg_report$settings$conf$assay_properties$type`__ </b>
+* Assay coding target size (VCF): <b> __`r pcg_report$settings$conf$assay_properties$effective_target_size_mb` Mb__ </b>
+* Assay sequencing mode (VCF): <b> __`r pcg_report$settings$conf$assay_properties$mode`__ </b>
 
 <br>
-Sample information:
 
-* Tumor primary site: <b> __`r pcg_report[['metadata']][['config']][["t_props"]][['tumor_type']]`__ </b>
-
-
-### Documentation - sequencing assay {data-padding=20}
-
-* Assay sequencing type (VCF): <b> __`r pcg_report[['metadata']][['config']][["assay_props"]][['type']]`__ </b>
-* Assay coding target size (VCF): <b> __`r pcg_report[['metadata']][['config']][["assay_props"]][['target_size_mb']]` Mb__ </b>
-* Assay sequencing mode (VCF): <b> __`r pcg_report[['metadata']][['config']][["assay_props"]][['mode']]`__ </b>
-
-<br>
-Estimated properties on DNA cellularity and ploidy:
-
-* Tumor purity: <b> __`r pcg_report[['metadata']][['config']][["t_props"]][['tumor_purity']]`__ </b>
-* Tumor ploidy: <b> __`r pcg_report[['metadata']][['config']][["t_props"]][['tumor_ploidy']]`__ </b>
+* Tumor sample - primary site: <b> __`r pcg_report$settings$conf$sample_properties$site`__ </b>
+* Tumor sample - purity: <b> __`r pcg_report$settings$conf$sample_properties$purity`__ </b>
+* Tumor sample - ploidy: <b> __`r pcg_report$settings$conf$sample_properties$ploidy`__ </b>
 
 <br>
 
@@ -75,32 +69,59 @@ Estimated properties on DNA cellularity and ploidy:
 
 The report generated with PCGR is based on the following underlying tools and knowledge resources:
 
-* __PCGR databundle version__
+* __PCGR reference data version__
   
-  * __`r pcg_report$metadata$pcgr_db_release$bundle_version$version`__
-  
-* __Software__ 
-```{r list_software, echo=F,results='asis'}
-for(n in names(pcg_report$metadata$pcgr_db_release)){
-  if(n == 'mosdepth' | n == 'bundle_version'){
-    next
-  }
-  if(pcg_report$metadata$pcgr_db_release[[n]]$resource_type == 'software'){
-    s <- paste0('    * [',pcg_report$metadata$pcgr_db_release[[n]]$name,'](',pcg_report$metadata$pcgr_db_release[[n]]$url,') - ',pcg_report$metadata$pcgr_db_release[[n]]$description, ' (',pcg_report$metadata$pcgr_db_release[[n]]$version,')')
-    cat(s,sep="\n")
-  }
-}
-
-```
-<br>
-
+  * __`r pcg_report$settings$reference_data$version`__
 
 * __Databases/datasets__ 
 ```{r list_db, echo=F,results='asis'}
-for(n in names(pcg_report$metadata$pcgr_db_release)){
-  if(pcg_report$metadata$pcgr_db_release[[n]]$resource_type == 'db' & n != 'gwas' & n != 'ct' & n != 'bundle_version'){
-    s <- paste0('    * [',pcg_report$metadata$pcgr_db_release[[n]]$name,'](',pcg_report$metadata$pcgr_db_release[[n]]$url,') - ',pcg_report$metadata$pcgr_db_release[[n]]$description, ' (',pcg_report$metadata$pcgr_db_release[[n]]$version,')')
-    cat(s,sep="\n")
+i <- 1
+ref_datasets <- pcg_report$ref_data$metadata
+for(i in 1:NROW(ref_datasets)){
+  source_full <- ref_datasets[i,"source"]
+  source <- ref_datasets[i,"source_abbreviation"]
+  description <- ref_datasets[i,"source_description"]
+  url <- ref_datasets[i,"source_url"]
+  version <- ref_datasets[i,"source_version"]
+  if(version == "."){
+    version = NA
+  }
+  license <- ref_datasets[i, "source_license"]
+  license_url <- ref_datasets[i, "source_license_url"]
+  if(license_url == "."){
+    license_url <- NA
+  }
+  wflow <- ref_datasets[i, "wflow"]
+  if(!(stringr::str_detect(
+    wflow,"pcgr"))){
+    next
+  }
+  
+  s <- ""
+  if(is.na(version)){
+    if(!is.na(license_url)){
+      s <- paste0("    * [", source_full, "](", url, ") - ", description, " - [",
+                  license,"](", license_url, ")")
+    }else{
+      s <- paste0("    * [", source_full, "](", url, ") - ", description, " - ",
+                  license)
+    }
+  }else{
+    if(!is.na(license_url)){
+      if(source == "cgc" | source == "gepa"){
+        s <- paste0("    * [", source_full, "](", url, ") - ", description, " (<b>", version, "</b>)",
+                    " - <b>[", license,"](", license_url, ")</b>")
+      }else{
+        s <- paste0("    * [", source_full, "](", url, ") - ", description, " (<b>", version, "</b>)",
+                    " - [", license,"](", license_url, ")")
+      }
+    }else{
+       s <- paste0("    * [", source_full, "](", url, ") - ", description, " (<b>", version, "</b>)",
+                  " - ", license)
+    }
+  }
+  if(s != ""){
+    cat(s, sep = "\n")
   }
 }
 
@@ -125,11 +146,9 @@ The prioritization of SNV and InDels found in the tumor sample is done according
 	 - Of weak clinical evidence (early trials, case reports etc. ([CIViC evidence levels C/D/E](https://civic.readthedocs.io/en/latest/model/evidence/level.html)))) in the same tumor type/class as specified by the user
 	 
  - [**TIER 3: Variants of uncertain clinical significance**](#tier-3) - includes other coding variants found in oncogenes or tumor suppressor genes
-   - Status as oncogenes and/or tumor suppressors genes are done according to the following scheme in PCGR:
-     - Five or more publications in the biomedical literature that suggests an oncogenic/tumor suppressor role for a given gene (as collected from the [CancerMine text-mining resource](http://bionlp.bcgsc.ca/cancermine/)), **OR**
-     - At least two publications from CancerMine that suggests an oncogenic/tumor suppressor role for a given gene **AND** an existing record for the same gene as a tumor suppressor/oncogene in the [Network of Cancer Genes (NCG)](http://ncg.kcl.ac.uk/)
-     - Status as oncogene is ignored if a given gene has three times as much (literature evidence) support for a role as a tumor suppressor gene (and vice versa)
-     - Oncogenes/tumor suppressor candidates from CancerMine/NCG that are found in the [curated list of false positive cancer drivers compiled by Bailey et al. (Cell, 2018)](https://www.ncbi.nlm.nih.gov/pubmed/30096302) have been excluded
+   - Genes are annotated as oncogenes and/or tumor suppressors genes if they
+       i) have an associated record in curated databases ([Network of Cancer Genes (NCG)](http://ncg.kcl.ac.uk/)/[Cancer Gene Census](https://www.sanger.ac.uk/data/cancer-gene-census/)), **OR**,
+       ii) have evidence from high-throughput literature mining (at least 20 publications, as collected from the [CancerMine text-mining resource](http://bionlp.bcgsc.ca/cancermine/)) 
      
  - [**TIER 4**](#tier-4) - includes other protein-coding variants
      - <i>Protein-coding</i> refers here to variants with the following consequences: 
@@ -139,7 +158,7 @@ The prioritization of SNV and InDels found in the tumor sample is done according
       - inframe_insertions/inframe_deletions
       - splice_donor_variant/splice_acceptor_variant
       - start_loss
- - [**NONCODING**](#noncoding) - includes other non-(protein)coding variants
+ - [**TIER 5**](#tier-5) - includes other non-(protein)coding variants
  
 A complete list of reported biomarkers that associate with variants in the tumor sample (not necessarily qualifying for assignment to TIER 1/TIER 2) is also shown in a separate section.
 
@@ -155,7 +174,6 @@ Somatic copy number aberrations identified in the tumor sample are classified in
 - [**TIER 2: Aberrations of potential clinical significance**](#tier-2-1) - constitutes amplified/lost genes linked to predictive, prognostic, or diagnostic biomarkers in the [CIViC database](http://civic.genome.wustl.edu) and the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers) that are either
 	 - Of strong clinical evidence in other tumor types/classes than the one specified by the user, **OR**
 	 - Of weak clinical evidence (early trials, case reports etc. ([CIViC evidence levels C/D/E](https://civic.readthedocs.io/en/latest/model/evidence/level.html)))) in the same tumor type/class as specified by the user
-	 - overlap between variants in the tumor sample and reported biomarkers must occur at the _exact variant level_ or at the _codon/exon level_
 	 
 Included in the report is also a complete list of [**all oncogenes subject to amplifications**](#scna-oncogene), [**tumor suppressor genes subject to homozygous deletions**](#scna-tsgene), and [**other drug targets subject to amplifications**](#scna-other)
 
@@ -163,14 +181,16 @@ Included in the report is also a complete list of [**all oncogenes subject to am
 
 The set of somatic mutations observed in a tumor reflects the varied mutational processes that have been active during its life history, providing insights into the routes taken to carcinogenesis. Exogenous mutagens, such as tobacco smoke and ultraviolet light, and endogenous processes, such as APOBEC enzymatic family functional activity or DNA mismatch repair deficiency, result in characteristic patterns of mutation. Mutational signatures can have significant clinical impact in certain tumor types ([Póti et al., 2019](https://www.ncbi.nlm.nih.gov/pubmed/31727117), [Ma et al., 2018](https://www.ncbi.nlm.nih.gov/pubmed/30120226))
 
-The **MutationalPatterns** package ([Blokzijl et al., 2018](https://www.ncbi.nlm.nih.gov/pubmed/29695279)) is used to estimate the relative contribution of known mutational signatures in a single tumor sample. [MutationalPatterns](https://github.com/UMCUGenetics/MutationalPatterns) makes an optimal reconstruction of the mutations observed in a given sample with a [COSMIC's (V3.2) reference collection of n = 78 mutational signatures (SBS, including sequencing artefacts)](https://cancer.sanger.ac.uk/signatures/sbs/). By default, we restrict the signatures in the reference collection to those already observed in the tumor type in question (i.e. from large-scale <i>de novo</i> signature extraction on ICGC-PCAWG tumor samples). 
+The **MutationalPatterns** package ([Blokzijl et al., 2018](https://www.ncbi.nlm.nih.gov/pubmed/29695279)) is used to estimate the relative contribution of known mutational signatures in a single tumor sample. [MutationalPatterns](https://github.com/UMCUGenetics/MutationalPatterns) makes an optimal reconstruction of the mutations observed in a given sample with a [COSMIC's (v3.4) reference collection of n = 86 mutational signatures (SBS, including sequencing artefacts)](https://cancer.sanger.ac.uk/signatures/sbs/). By default, we restrict the signatures in the reference collection to those already observed in the tumor type in question (i.e. from large-scale <i>de novo</i> signature extraction on ICGC-PCAWG tumor samples). 
 
 ```{r results = "asis", eval = pcg_report$content$mutational_signatures$eval & !pcg_report$content$mutational_signatures$missing_data}
 
-cat("Specifically, for tumors of type <b>", pcg_report$metadata$config$t_props$tumor_type,"</b>, mutational signature reconstruction is limited to the following reference collection:",sep="\n")
+cat("Specifically, for tumors of type <b>", pcg_report$settings$conf$sample_properties$site,"</b>, mutational signature reconstruction is limited to the following reference collection:",sep="\n")
 
 dat <- pcg_report$content$mutational_signatures$result$reference_data
-if("signature_id" %in% colnames(dat) & "aetiology_keyword" %in% colnames(dat) & NROW(dat) > 0){
+if("SIGNATURE_ID" %in% colnames(dat) & 
+   "AETIOLOGY_KEYWORD" %in% colnames(dat) & 
+   NROW(dat) > 0){
   cat('<ul>')
   i <- 1
   
@@ -180,17 +200,17 @@ if("signature_id" %in% colnames(dat) & "aetiology_keyword" %in% colnames(dat) & 
         stringr::str_replace(
           stringr::str_replace(
             stringr::str_replace(
-              stringr::str_replace(signature_id,"SBS",""),
+              stringr::str_replace(SIGNATURE_ID,"SBS",""),
               "a",".2"),
             "b",".4"),
           "c", ".6"),
         "d",".8"))) |>
     dplyr::arrange(tmp_id) |>
-    dplyr::select(signature_id, aetiology_keyword) |>
+    dplyr::select(SIGNATURE_ID, AETIOLOGY_KEYWORD) |>
     dplyr::distinct()
   
   while(i <= nrow(refsig_collection_site)){
-    cat(paste0("<li><b>",refsig_collection_site[i,]$signature_id, "</b> - ", refsig_collection_site[i,]$aetiology_keyword),'</li>\n')
+    cat(paste0("<li><b>",refsig_collection_site[i,]$SIGNATURE_ID, "</b> - ", refsig_collection_site[i,]$AETIOLOGY_KEYWORD),'</li>\n')
     i <- i + 1
   }
   cat('</ul>')
@@ -198,11 +218,11 @@ if("signature_id" %in% colnames(dat) & "aetiology_keyword" %in% colnames(dat) & 
 
 cat("<br>")
 
-if(pcg_report$metadata$config$msigs$all_reference_signatures == T){
+if(pcg_report$settings$conf$somatic_snv$mutational_signatures$all_reference_signatures == T){
   cat("<b>NOTE:</b> Option <i>'--all_reference_signatures'</i> have been applied for this query, which means that all reference signatures (n = 67) have been considered during optimal reconstruction of the mutational profile with reference signatures",sep="\n")
 }
 
-if(pcg_report$metadata$config$msigs$include_artefact_signatures == T){
+if(pcg_report$settings$conf$somatic_snv$mutational_signatures$include_artefact_signatures == T){
   cat("<b>NOTE:</b> Option '--include_artefact_signatures' have been applied for this query, which means that also signatures attributed to e.g. sequencing artefacts have been considered during optimal reconstruction of the mutational profile with reference signatures",sep="\n")
 }
 ```   
@@ -216,12 +236,12 @@ cat("The accuracy of signature fitting (highlighted in value box) reflects how w
 
 #### Tumor mutational burden (TMB)
 
-Tumor mutational load or mutational burden is a measure of the number of mutations within a tumor genome, defined as the total number of mutations per coding area of a tumour genome. TMB may serve as a proxy for determining the number of neoantigens per tumor, which in turn may have implications for response to immunotherapy. For estimation of TMB, PCGR employs two different algorithms (one to be chosen by the user):
+Tumor mutational load or mutational burden is a measure of the number of mutations within a tumor genome, defined as the total number of mutations per coding area of a tumour genome. TMB serves as a proxy for the number of neoantigens generated per tumor, which in turn is correlated to immunotherapy response. For estimation of TMB, PCGR employs two different algorithms (one to be chosen by the user):
 
-  1) __all_coding__: the same approach as was outlined in a recently published large-scale study of TMB ([Chalmers et al., 2017](https://www.ncbi.nlm.nih.gov/pubmed/28420421)), i.e. counting all somatic base substitutions and indels in the protein-coding regions of the sequencing assay, including synonymous alterations. 
-  2) __nonsyn__: non-synonymous variants only, i.e. as employed by [Fernandez et al., 2019](https://www.ncbi.nlm.nih.gov/pubmed/31475242)
+  1) **TMB_all_coding**: the same approach as was outlined in a large-scale study of TMB ([Chalmers et al., 2017](https://www.ncbi.nlm.nih.gov/pubmed/28420421)), i.e. counting all somatic base substitutions and indels in the protein-coding regions of the sequencing assay, including synonymous alterations. 
+  2) **TMB_missense_only**: missense/non-synonymous variants only, i.e. as employed by [Fernandez et al., 2019](https://www.ncbi.nlm.nih.gov/pubmed/31475242)
 
-Numbers obtained with 1) or 2) is next divided by the coding target size of the sequencing assay.
+Numbers obtained with 1) or 2) is next divided by the effective (coding) target size of the sequencing assay, which can be provided by the user (defaults to 34Mb, approximate coding target size of GENCODE gene set).
 
 
 #### MSI classification
