--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_oncogene.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_oncogene.Rmd
@@ -19,8 +19,8 @@ flexdashboard::valueBox(
   pcg_report$content$cna$vstats$n_oncogene_gain,
   color = ifelse(
     pcg_report$content$cna$vstats$n_oncogene_gain > 0,
-    pcg_report$settings$conf$visual_reporting$color_value_box,
-    pcg_report$settings$conf$visual_reporting$color_none),
+    pcg_report$settings$conf$report_color,
+    pcgrr::color_palette$none),
   icon = "fa-dna", href="#scna-oncogene")
 ```
 
@@ -31,8 +31,8 @@ flexdashboard::valueBox(
   pcg_report$content$cna$vstats$n_tsg_loss,
   color = ifelse(
     pcg_report$content$cna$vstats$n_tsg_loss > 0,
-    pcg_report$settings$conf$visual_reporting$color_value_box,
-    pcg_report$settings$conf$visual_reporting$color_none),
+    pcg_report$settings$conf$report_color,
+    pcgrr::color_palette$none),
   icon = "fa-dna", href="#scna-tsgene")
 ```
 
@@ -43,8 +43,8 @@ flexdashboard::valueBox(
   pcg_report$content$cna$vstats$n_other_drugtarget_gain,
   color = ifelse(
     pcg_report$content$cna$vstats$n_other_drugtarget_gain > 0,
-  pcg_report$settings$conf$visual_reporting$color_value_box,
-  pcg_report$settings$conf$visual_reporting$color_none),
+  pcg_report$settings$conf$report_color,
+  pcgrr::color_palette$none),
 icon = "fa-dna", href="#scna-other")
 ```
 
@@ -61,25 +61,36 @@ Row
 cat('\nProto-oncogenes subject to amplifications (right panel) can be filtered according to various criteria:\n')
 
 drug_levels <- levels(as.factor(
-  pcg_report[["content"]][["cna"]][["disp"]][["oncogene_gain"]]$DRUGS_ON_LABEL))
-# if(length(drug_levels) > 0){
-#   tier3_vars <- tier3_vars |>
-#     dplyr::arrange(MUTATION_HOTSPOT, desc(OPENTARGETS_RANK))
-# }
+  pcg_report[["content"]][["cna"]][["callset"]][["variant_display"]]$TARGETED_INHIBITORS))
 
-oncogene_gain_variants <- crosstalk::SharedData$new(
+oncogene_gain_variants <- 
   dplyr::filter(
-    pcg_report[["content"]][["cna"]][["callset"]][["variant"]],
-    TIER == 3 & ONCOGENE == TRUE))
+    pcg_report[["content"]][["cna"]][["callset"]][["variant_display"]],
+    !is.na(.data$TIER) & 
+    .data$TIER == 3 & 
+      .data$ONCOGENE == TRUE & 
+      .data$VARIANT_CLASS == "gain") |>
+  dplyr::select(
+    dplyr::any_of(
+      pcgrr::dt_display$cna_other
+    )
+  )
+
+oncogene_gain_variants_sd <- 
+  crosstalk::SharedData$new(oncogene_gain_variants)
+
 crosstalk::bscols(
   list(
-    crosstalk::filter_select("SYMBOL", "Gene", oncogene_gain_variants, ~SYMBOL),
-    crosstalk::filter_slider("N_MAJOR", "Major copy number", oncogene_gain_variants, ~N_MAJOR),
-    crosstalk::filter_slider("N_MINOR", "Minor copy number", oncogene_gain_variants, ~N_MINOR),
+    crosstalk::filter_slider(
+      "N_MAJOR", "Major copy number", oncogene_gain_variants_sd, ~N_MAJOR),
+    crosstalk::filter_slider(
+      "N_MINOR", "Minor copy number", oncogene_gain_variants_sd, ~N_MINOR)
   ),
   list(
-    crosstalk::filter_select("CHROMOSOME", "Chromosome", oncogene_gain_variants, ~CHROM),
-    crosstalk::filter_select("EVENT_TYPE", "CNA event", oncogene_gain_variants, ~EVENT_TYPE)
+    crosstalk::filter_select(
+      "SYMBOL", "Gene", oncogene_gain_variants_sd, ~SYMBOL),
+    crosstalk::filter_select(
+      "EVENT_TYPE", "CNA event", oncogene_gain_variants_sd, ~EVENT_TYPE)
   )
 )
 
@@ -98,36 +109,43 @@ cat('\n')
 
 ```{r table_scna_oncogene, eval = pcg_report$content$cna$vstats$n_oncogene_gain > 0}
 
-dt <- oncogene_gain_variants |>
-  DT::datatable(escape = F, 
-                extensions = c("Buttons","Responsive"), 
-                options = list(
-                  pageLength = 8, 
-                  scrollY = scrollY_flexdb_container, 
-                  buttons = c('csv','excel'), 
-                  #autoWidth = T, 
-                  #fixedColumns = T,
-                  #fixedHeader = T,
-                  scrollX = "900px",
-                  #columnDefs = list(list(width = '90px', targets = c(1,2,3,4,5,6))),
-                  dom = 'Bfrtip'))
+dt <- oncogene_gain_variants_sd |>
+  DT::datatable(
+    escape = F, 
+    extensions = c("Buttons","Responsive"), 
+    options = list(
+      pageLength = 8, 
+      scrollY = scrollY_flexdb_container, 
+      buttons = c('csv','excel'), 
+      scrollX = "900px",
+      dom = 'Bfrtip'))
 
 if(length(drug_levels) > 0){
   dt <- dt |>
-    DT::formatStyle("DRUGS_ON_LABEL","DRUGS_ON_LABEL",
-                    color = "white", fontWeight = "bold",
-                    backgroundColor = DT::styleEqual(drug_levels, rep("black", length(drug_levels)))
+    DT::formatStyle(
+      "TARGETED_INHIBITORS_ALL",
+      "TARGETED_INHIBITORS_ALL",
+      color = "white", 
+      fontWeight = "bold",
+      backgroundColor = DT::styleEqual(
+        drug_levels, rep(
+          "black", 
+          length(drug_levels)))
     )
 }
 dt |>
-  DT::formatStyle("SYMBOL","TISSUE_ASSOC_RANK", color = "white", backgroundColor = DT::styleInterval(
-    pcg_report$settings$conf$visual_reporting$cancer_assoc$breaks,
-    pcg_report$settings$conf$visual_reporting$cancer_assoc$values))
+  DT::formatStyle(
+    "SYMBOL",
+    "TISSUE_ASSOC_RANK", 
+    color = "white", 
+    backgroundColor = DT::styleInterval(
+      pcgrr::color_palette$cancer_assoc$breaks,
+      pcgrr::color_palette$cancer_assoc$values))
 
 ```
 
 
-```{r oncogene_missing_data, echo=F, results = 'asis', eval = pcg_report$content$cna$vstats$n_oncogene_gain) == 0}
+```{r oncogene_missing_data, echo=F, results = 'asis', eval = pcg_report$content$cna$vstats$n_oncogene_gain == 0}
 cat('\n*  <i> <b>No</b> proto-oncogenes subject to copy number amplifications.</i>',sep='\n')
 cat('\n')
 ```
