--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_other.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_other.Rmd
@@ -7,38 +7,41 @@ Row
 
 ### Key findings
 
-```{r cna_vbox_mainhits2}
+```{r cna_vbox_mainhits3}
 flexdashboard::valueBox("sCNA", caption = NULL, color = "#000000", icon = NULL)
 ```
 
 ### Proto-oncogenes subject to amplification
 
-```{r cna_gains_oncogenes2, echo = F}
-flexdashboard::valueBox(NROW(pcg_report$content$cna$disp$oncogene_gain),
-                        color = ifelse(NROW(pcg_report$content$cna$disp$oncogene_gain) > 0,
-                                       pcg_report$settings$conf$visual_reporting$color_value_box,
-                                       pcg_report$settings$conf$visual_reporting$color_none),
-                        icon = "fa-dna", href="#scna-oncogene")
+```{r cna_gains_oncogenes3, echo = F}
+flexdashboard::valueBox(
+  pcg_report$content$cna$vstats$n_oncogene_gain,
+  color = ifelse(pcg_report$content$cna$vstats$n_oncogene_gain > 0,
+                 pcg_report$settings$conf$report_color,
+                 pcgrr::color_palette$none),
+  icon = "fa-dna", href="#scna-oncogene")
 ```
 
 ### Loss of tumor suppressor genes
 
-```{r cna_loss_tsgene2, echo = F}
-flexdashboard::valueBox(NROW(pcg_report$content$cna$disp$tsgene_loss),
-                        color = ifelse(NROW(pcg_report$content$cna$disp$tsgene_loss) > 0,
-                                       pcg_report$settings$conf$visual_reporting$color_value_box,
-                                       pcg_report$settings$conf$visual_reporting$color_none),
-                        icon = "fa-dna", href="#scna-tsgene")
+```{r cna_loss_tsgene3, echo = F}
+flexdashboard::valueBox(
+  pcg_report$content$cna$vstats$n_tsg_loss,
+  color = ifelse(pcg_report$content$cna$vstats$n_tsg_loss > 0,
+                 pcg_report$settings$conf$report_color,
+                 pcgrr::color_palette$none),
+  icon = "fa-dna", href="#scna-tsgene")
 ```
 
 ### Other drug targets subject to amplification
 
-```{r cna_gain_target2, echo = F}
-flexdashboard::valueBox(NROW(pcg_report$content$cna$disp$other_target),
-                        color = ifelse(NROW(pcg_report$content$cna$disp$other_target) > 0,
-                                       pcg_report$settings$conf$visual_reporting$color_value_box,
-                                       pcg_report$settings$conf$visual_reporting$color_none),
-                        icon = "fa-dna", href="#scna-other")
+```{r cna_gain_target3, echo = F}
+flexdashboard::valueBox(
+  pcg_report$content$cna$vstats$n_other_drugtarget_gain,
+  color = ifelse(pcg_report$content$cna$vstats$n_other_drugtarget_gain > 0,
+                 pcg_report$settings$conf$report_color,
+                 pcgrr::color_palette$none),
+  icon = "fa-dna", href="#scna-other")
 ```
 
 Row
@@ -49,26 +52,45 @@ Row
 
 <br><br>
 
-```{r table_browse_scna_other, echo=F, results = "asis", eval = NROW(pcg_report$content$cna$disp$other_target) > 0}
+```{r table_browse_scna_other, echo=F, results = "asis", eval = pcg_report$content$cna$vstats$n_other_drugtarget_gain > 0}
 
 cat('\nOther drug targets subject to amplifications (right panel) can be filtered according to various criteria:\n')
 
-other_target_variants <- crosstalk::SharedData$new(pcg_report[["content"]][["cna"]][["disp"]][["other_target"]])
+other_target_variants <- 
+  dplyr::filter(
+    pcg_report$content$cna$callset$variant_display,
+    is.na(.data$TIER) &
+      .data$VARIANT_CLASS == "gain" &
+      !is.na(.data$TARGETED_INHIBITORS_ALL)) |>
+  dplyr::select(
+    dplyr::any_of(
+      pcgrr::dt_display$cna_other
+    )
+  )
+
+other_target_variants_sd <- crosstalk::SharedData$new(
+  other_target_variants
+)
+
 crosstalk::bscols(
   list(
-    crosstalk::filter_select("SYMBOL", "Gene", other_target_variants, ~SYMBOL),
-    crosstalk::filter_slider("LOG_R", "Log-ratio", other_target_variants, ~LOG_R)
+    crosstalk::filter_slider(
+      "N_MAJOR", "Major copy number", other_target_variants_sd, ~N_MAJOR),
+    crosstalk::filter_slider(
+      "N_MINOR", "Minor copy number", other_target_variants_sd, ~N_MINOR)
   ),
   list(
-    crosstalk::filter_select("CHROMOSOME", "Chromosome", other_target_variants, ~CHROMOSOME),
-    crosstalk::filter_select("EVENT_TYPE", "CNA event", other_target_variants, ~EVENT_TYPE)
+    crosstalk::filter_select(
+      "SYMBOL", "Gene", other_target_variants_sd, ~SYMBOL),
+    crosstalk::filter_select(
+      "EVENT_TYPE", "CNA event", other_target_variants_sd, ~EVENT_TYPE)
   )
 )
 
 ```
 
 
-```{r other_missing_filters, echo=F, results = 'asis', eval = NROW(pcg_report$content$cna$disp$other_target) == 0}
+```{r other_missing_filters, echo=F, results = 'asis', eval = pcg_report$content$cna$vstats$n_other_drugtarget_gain == 0}
 cat('\n*  <i> <b>No</b> other drug targets subject to copy number amplifications.</i>',sep='\n')
 cat('\n')
 ```
@@ -78,26 +100,32 @@ cat('\n')
 
 <br><br>
 
-```{r table_scna_other, eval = NROW(pcg_report$content$cna$disp$other_target) > 0}
+```{r table_scna_other, eval = pcg_report$content$cna$vstats$n_other_drugtarget_gain > 0}
 
-other_target_variants |>
-  DT::datatable(escape = F, 
-                extensions = c("Buttons","Responsive"), 
-                options = list(pageLength = 8, 
-                               scrollY = scrollY_flexdb_container, 
-                               buttons = c('csv','excel'), 
-                               #autoWidth = T, 
-                 fixedColumns = T,
-                 fixedHeader = T,
-                 scrollX = "900px",
-                  columnDefs = list(list(width = '90px', targets = c(1,2,3,4,5,6))),
-                               dom = 'Bfrtip')) |>
-  DT::formatStyle("SYMBOL","OPENTARGETS_RANK", color = "white", backgroundColor = DT::styleInterval(pcg_report[['content']][['report_display_config']][['opentargets_rank']][['breaks']], pcg_report[['content']][['report_display_config']][['opentargets_rank']][['colors']]))
+other_target_variants_sd |>
+  DT::datatable(
+    escape = F, 
+    extensions = c("Buttons","Responsive"), 
+    options = list(
+      pageLength = 8, 
+      scrollY = scrollY_flexdb_container, 
+      buttons = c('csv','excel'), 
+      #autoWidth = T, 
+      fixedColumns = T,
+      fixedHeader = T,
+      scrollX = "900px",
+      columnDefs = list(list(width = '90px', targets = c(1,2,3,4,5,6))),
+      dom = 'Bfrtip')) |>
+  DT::formatStyle("SYMBOL","TISSUE_ASSOC_RANK", 
+                  color = "white", 
+                  backgroundColor = DT::styleInterval(
+    pcgrr::color_palette$cancer_assoc$breaks,
+    pcgrr::color_palette$cancer_assoc$values))
 
 ```
 
 
-```{r other_missing_data, echo=F, results = 'asis', eval = NROW(pcg_report$content$cna$disp$other_target) == 0}
+```{r other_missing_data, echo=F, results = 'asis', eval = pcg_report$content$cna$vstats$n_other_drugtarget_gain == 0}
 cat('\n*  <i> <b>No</b> other drug targets subject to copy number amplifications.</i>',sep='\n')
 cat('\n')
 ```
