--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_tier1.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_tier1.Rmd
@@ -13,50 +13,45 @@ flexdashboard::valueBox("TIER 1", caption = NULL, color = '#000000', icon = NULL
 ### Biomarker genes
 
 ```{r}
-num_genes <- 0
-if(NROW(pcg_report$content$cna$disp$tier1) > 0){
-  num_genes <- length(unique(pcg_report$content$cna$disp$tier1$SYMBOL))
-}
 flexdashboard::valueBox(
-  num_genes, 
-  color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
+  pcg_report$content$cna$vstats$n_genes_tier1, 
+  color = 
+    pcg_report$settings$conf$report_color, icon = "fa-dna")
 
 ```
-
-### Biomarker aberrations
-
-```{r}
-flexdashboard::valueBox(length(unique(pcg_report$content$cna$disp$tier1$SEGMENT)), color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
-```
-
 
 ### Diagnostic evidence items
 
 ```{r}
-entries_diagnostic <- NROW(pcg_report$content$cna$clin_eitem$query_ttype$diagnostic$A_B)
-flexdashboard::valueBox(entries_diagnostic, color = ifelse(entries_diagnostic > 0,
-                        "#00a65a",
-                        pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription")
+flexdashboard::valueBox(
+  pcg_report$content$cna$vstats$n_eitems_diagnostic_tier1, 
+  color = ifelse(
+    pcg_report$content$cna$vstats$n_eitems_diagnostic_tier1 > 0,
+    pcgrr::color_palette$success,
+    pcgrr::color_palette$none), icon = "fa-file-prescription")
 ```
 
 ### Prognostic evidence items
 
 ```{r}
-entries_prognostic <- NROW(pcg_report$content$cna$clin_eitem$query_ttype$prognostic$A_B)
-flexdashboard::valueBox(entries_prognostic, color = ifelse(entries_prognostic > 0,
-                        "#00a65a",
-                        pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription")
+flexdashboard::valueBox(
+  pcg_report$content$cna$vstats$n_eitems_prognostic_tier1, 
+  color = ifelse(
+    pcg_report$content$cna$vstats$n_eitems_prognostic_tier1 > 0,
+    pcgrr::color_palette$success,
+    pcgrr::color_palette$none), icon = "fa-file-prescription")
 ```
 
 ### Predictive evidence items
 
 ```{r}
-entries_predictive <- NROW(pcg_report$content$cna$clin_eitem$query_ttype$predictive$A_B)
-flexdashboard::valueBox(entries_predictive, color = ifelse(entries_predictive > 0,
-                        "#00a65a",
-                        pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription")
+flexdashboard::valueBox(
+  pcg_report$content$cna$vstats$n_eitems_predictive_tier1, 
+  color = ifelse(
+    pcg_report$content$cna$vstats$n_eitems_predictive_tier1 > 0,
+    pcgrr::color_palette$success,
+    pcgrr::color_palette$none), icon = "fa-file-prescription")
 ```
-
 
 Row
 -----------------------------------------------------
@@ -66,39 +61,52 @@ Row
 
 <br><br>
 
-```{r table_browse_scna_tier1, echo=F, results = "asis", eval = NROW(pcg_report$content$cna$disp$tier1) > 0}
+```{r table_browse_scna_tier1, echo=F, results = "asis", eval = pcg_report$content$cna$vstats$n_tier1 > 0}
 
 cat('\nEvidence items associated with variants in tier 1 (right panel) can be filtered according to various criteria:\n')
 
-variants_tier1 <- dplyr::bind_rows(
-  pcg_report[['content']][['cna']][['clin_eitem']][['query_ttype']][['diagnostic']][['A_B']],
-  pcg_report[['content']][['cna']][['clin_eitem']][['query_ttype']][['predictive']][['A_B']],
-  pcg_report[['content']][['cna']][['clin_eitem']][['query_ttype']][['prognostic']][['A_B']])
+var_eitems_tier1 <- pcg_report$content$cna$callset$variant_display |>
+  dplyr::filter(!is.na(.data$TIER) & .data$TIER == 1) |>
+  dplyr::select(-c("TIER_DESCRIPTION","TIER_FRAMEWORK")) |>
+  dplyr::inner_join(
+    pcg_report$content$cna$callset$biomarker_evidence$items,
+    by = c("VAR_ID","TIER","VARIANT_CLASS","ENTREZGENE")
+  ) |>
+  dplyr::distinct() |>
+  dplyr::select(
+    dplyr::any_of(
+      pcgrr::dt_display$cna_eitem))
 
-variants_tier1_shared <- crosstalk::SharedData$new(variants_tier1)
+cna_tier1_shared <- crosstalk::SharedData$new(var_eitems_tier1)
 crosstalk::bscols(
   list(
+     crosstalk::filter_select(
+      "VARIANT_CLASS", "Aberration type", 
+      cna_tier1_shared, ~VARIANT_CLASS),
     crosstalk::filter_select(
       "BM_CANCER_TYPE", "Cancer type", 
-      variants_tier1_shared, ~BM_CANCER_TYPE),
+      cna_tier1_shared, ~BM_CANCER_TYPE),
     crosstalk::filter_select(
       "BM_CLINICAL_SIGNIFICANCE", "Clinical significance", 
-      variants_tier1_shared, ~BM_CLINICAL_SIGNIFICANCE),
+      cna_tier1_shared, ~BM_CLINICAL_SIGNIFICANCE),
     crosstalk::filter_slider(
-      "RATING", "Rating", variants_tier1_shared, 
-      ~RATING, min = 0, max = 5, step = 1, ticks = T)
+      "BM_RATING", "Rating", cna_tier1_shared, 
+      ~BM_RATING, min = 0, max = 5, step = 1, ticks = T)
 
   ),
   list(
     crosstalk::filter_select(
       "BM_EVIDENCE_TYPE", "Evidence type", 
-      variants_tier1_shared, ~BM_EVIDENCE_TYPE),
+      cna_tier1_shared, ~BM_EVIDENCE_TYPE),
     crosstalk::filter_select(
       "BM_EVIDENCE_LEVEL", "Evidence level", 
-      variants_tier1_shared, ~BM_EVIDENCE_LEVEL),
+      cna_tier1_shared, ~BM_EVIDENCE_LEVEL),
+    crosstalk::filter_select(
+      "BM_EVIDENCE_DIRECTION", "Evidence direction", 
+      cna_tier1_shared, ~BM_EVIDENCE_DIRECTION),
     crosstalk::filter_select(
       "BM_THERAPEUTIC_CONTEXT", "Therapeutic context", 
-      variants_tier1_shared, ~BM_THERAPEUTIC_CONTEXT)
+      cna_tier1_shared, ~BM_THERAPEUTIC_CONTEXT)
   )
 )
 
@@ -106,38 +114,44 @@ crosstalk::bscols(
 ```
 
 
-```{r tier1_scna_missing_filters, echo=F, results = 'asis', eval = NROW(pcg_report$content$cna$disp$tier1) == 0}
+```{r tier1_scna_missing_filters, echo=F, results = 'asis', eval = pcg_report$content$cna$vstats$n_tier1 == 0}
 cat('\n*  <i> <font style="font-size: 110%"><b>No</b> somatic copy-number aberrations of strong clinical significance found.</font></i>', sep = '\n')
 cat('\n')
 ```
 
 
-### Tier 1  - variant evidence items {data-padding=15}
+### Tier 1 - variant evidence items {data-padding=15}
 
 <br><br>
 
 
-```{r table_scna_tier1, eval = NROW(pcg_report$content$cna$disp$tier1) > 0}
+```{r table_scna_tier1, eval = pcg_report$content$cna$vstats$n_tier1 > 0}
 
-variants_tier1_shared |>
-  DT::datatable(escape=F, 
-                extensions=c("Buttons","Responsive"), 
-                options=list(buttons = c('csv','excel'), 
-                             scrollCollapse=T, 
-                             scrollY = scrollY_flexdb_container,
-                             #autoWidth = T, 
-                 fixedColumns = T,
-                 fixedHeader = T,
-                 scrollX = "900px",
-                  columnDefs = list(list(width = '90px', targets = c(1,2,3,4,5,6))),
-                             dom = 'Bfrtip')) |>
-  DT::formatStyle('BM_EVIDENCE_LEVEL', 
-                 backgroundColor = DT::styleEqual(c('A: Validated','A: FDA/NCCN/ELN guidelines','B: Clinical evidence','B1: Clinical evidence: late trials','B2: Clinical evidence: early trials','C: Case study','D: Preclinical evidence','E: Indirect evidence'), c("#009E73","#009E73","#56B4E9", "#56B4E9","#56B4E9","#0072B2","#E69F00", "#F0E442")))
+cna_tier1_shared |>
+  DT::datatable(
+    escape = F, 
+    extensions = c("Buttons","Responsive"), 
+    options = list(
+      buttons = c('csv','excel'), 
+      scrollCollapse=T, 
+      scrollY = scrollY_flexdb_container,
+      fixedColumns = T,
+      fixedHeader = T,
+      scrollX = "900px",
+      columnDefs = list(
+        list(
+          width = '90px', targets = c(1,2,3,4,5,6))),
+      dom = 'Bfrtip')) |>
+  DT::formatStyle(
+    'BM_EVIDENCE_LEVEL', 
+    backgroundColor = DT::styleEqual(
+      pcgrr::color_palette$clinical_evidence$levels,
+      pcgrr::color_palette$clinical_evidence$values))
 
 ```
 
 
-```{r tier1_scna_missing_data, echo=F, results = 'asis', eval = NROW(pcg_report$content$cna$disp$tier1) == 0}
+```{r tier1_scna_missing_data, echo=F, results = 'asis', eval = pcg_report$content$cna$vstats$n_tier1 == 0}
 cat('\n*  <i> <font style="font-size: 110%"><b>No</b> somatic copy-number aberrations of strong clinical significance found.</font></i>',sep='\n')
 cat('\n')
 ```
