--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_tier2.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_tier2.Rmd
@@ -13,50 +13,45 @@ flexdashboard::valueBox("TIER 2", caption = NULL, color = '#000000', icon = NULL
 ### Biomarker genes
 
 ```{r}
-#markers <- paste(unique(pcg_report$content$cna$disp$tier2$SYMBOL),collapse="|")
-#if(stringr::str_count(markers, pattern="\\|") > 1){
-  #markers <- paste0(paste(head(unique(pcg_report$content$cna$disp$tier2$SYMBOL), 2), collapse = "|"), "++")
-#}
-flexdashboard::valueBox(length(unique(pcg_report$content$cna$disp$tier2$SYMBOL)), color = pcg_report$settings$conf$visual_reporting$color_value_box)
+flexdashboard::valueBox(
+  pcg_report$content$cna$vstats$n_genes_tier2, 
+  color = 
+    pcg_report$settings$conf$report_color, icon = "fa-dna")
+
 ```
-
-### Biomarker aberrations
-
-```{r}
-flexdashboard::valueBox(length(unique(pcg_report$content$cna$disp$tier2$SEGMENT)), color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
-```
-
 
 ### Diagnostic evidence items
 
 ```{r}
-entries_diagnostic <- NROW(pcg_report$content$cna$clin_eitem$other_ttype$diagnostic$A_B) + 
-  NROW(pcg_report$content$cna$clin_eitem$query_ttype$diagnostic$C_D_E)
-flexdashboard::valueBox(entries_diagnostic, color = ifelse(entries_diagnostic > 0,
-                        pcg_report$settings$conf$visual_reporting$color_palette[['success']][['values']][1],
-                        pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription")
+flexdashboard::valueBox(
+  pcg_report$content$cna$vstats$n_eitems_diagnostic_tier2, 
+  color = ifelse(
+    pcg_report$content$cna$vstats$n_eitems_diagnostic_tier2 > 0,
+    pcgrr::color_palette$success,
+    pcgrr::color_palette$none), icon = "fa-file-prescription")
 ```
 
 ### Prognostic evidence items
 
 ```{r}
-entries_prognostic <- NROW(pcg_report$content$cna$clin_eitem$other_ttype$prognostic$A_B) + 
-  NROW(pcg_report$content$cna$clin_eitem$query_ttype$prognosticc$C_D_E)
-flexdashboard::valueBox(entries_prognostic, color = ifelse(entries_prognostic > 0,
-                        pcg_report$settings$conf$visual_reporting$color_palette[['success']][['values']][1],
-                        pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription")
+flexdashboard::valueBox(
+  pcg_report$content$cna$vstats$n_eitems_prognostic_tier2, 
+  color = ifelse(
+    pcg_report$content$cna$vstats$n_eitems_prognostic_tier2 > 0,
+    pcgrr::color_palette$success,
+    pcgrr::color_palette$none), icon = "fa-file-prescription")
 ```
 
 ### Predictive evidence items
 
 ```{r}
-entries_predictive <- NROW(pcg_report$content$cna$clin_eitem$other_ttype$predictive$A_B) + 
-  NROW(pcg_report$content$cna$clin_eitem$query_ttype$predictive$C_D_E)
-flexdashboard::valueBox(entries_predictive, color = ifelse(entries_predictive > 0,
-                        "#00a65a",
-                        pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription")
+flexdashboard::valueBox(
+  pcg_report$content$cna$vstats$n_eitems_predictive_tier2, 
+  color = ifelse(
+    pcg_report$content$cna$vstats$n_eitems_predictive_tier2 > 0,
+    pcgrr::color_palette$success,
+    pcgrr::color_palette$none), icon = "fa-file-prescription")
 ```
-
 
 Row
 -----------------------------------------------------
@@ -66,34 +61,52 @@ Row
 
 <br><br>
 
-```{r table_browse_scna_tier2, echo=F, results = "asis", eval = NROW(pcg_report$content$cna$disp$tier2) > 0}
+```{r table_browse_scna_tier2, echo=F, results = "asis", eval = pcg_report$content$cna$vstats$n_tier2 > 0}
 
-cat('\nEvidence items associated with variants in tier 1 (right panel) can be filtered according to various criteria:\n')
+cat('\nEvidence items associated with variants in tier 2 (right panel) can be filtered according to various criteria:\n')
 
-variants_tier2 <- dplyr::bind_rows(
-  pcg_report[['content']][['cna']][['clin_eitem']][['other_ttype']][['diagnostic']][['A_B']],
-  pcg_report[['content']][['cna']][['clin_eitem']][['other_ttype']][['predictive']][['A_B']],
-  pcg_report[['content']][['cna']][['clin_eitem']][['other_ttype']][['prognostic']][['A_B']],
-  pcg_report[['content']][['cna']][['clin_eitem']][['query_ttype']][['diagnostic']][['C_D_E']],
-  pcg_report[['content']][['cna']][['clin_eitem']][['query_ttype']][['predictive']][['C_D_E']],
-  pcg_report[['content']][['cna']][['clin_eitem']][['query_ttype']][['prognostic']][['C_D_E']]) |>
-  dplyr::arrange(BM_EVIDENCE_LEVEL, RATING)
+var_eitems_tier2 <- pcg_report$content$cna$callset$variant_display |>
+  dplyr::filter(!is.na(.data$TIER) & .data$TIER == 2) |>
+  dplyr::select(-c("TIER_DESCRIPTION")) |>
+  dplyr::inner_join(
+    pcg_report$content$cna$callset$biomarker_evidence$items,
+    by = c("VAR_ID","TIER","VARIANT_CLASS","ENTREZGENE")
+  ) |>
+  dplyr::distinct() |>
+  dplyr::select(
+    dplyr::any_of(
+      pcgrr::dt_display$cna_eitem))
 
-
-variants_tier2_shared <- crosstalk::SharedData$new(variants_tier2)
+cna_tier2_shared <- crosstalk::SharedData$new(var_eitems_tier2)
 crosstalk::bscols(
   list(
-    crosstalk::filter_select("BM_CANCER_TYPE", "Cancer type", variants_tier2_shared, ~BM_CANCER_TYPE),
-    crosstalk::filter_select("BM_CLINICAL_SIGNIFICANCE", "Clinical significance", variants_tier2_shared, ~BM_CLINICAL_SIGNIFICANCE),
-    crosstalk::filter_select("CNA_TYPE", "Loss/gain", variants_tier2_shared, ~CNA_TYPE),
-    crosstalk::filter_slider("RATING", "Rating", variants_tier2_shared, ~RATING, min = 0, max = 5, step = 1, ticks = T)
+     crosstalk::filter_select(
+      "VARIANT_CLASS", "Aberration type", 
+      cna_tier2_shared, ~VARIANT_CLASS),
+    crosstalk::filter_select(
+      "BM_CANCER_TYPE", "Cancer type", 
+      cna_tier2_shared, ~BM_CANCER_TYPE),
+    crosstalk::filter_select(
+      "BM_CLINICAL_SIGNIFICANCE", "Clinical significance", 
+      cna_tier2_shared, ~BM_CLINICAL_SIGNIFICANCE),
+    crosstalk::filter_slider(
+      "BM_RATING", "Rating", cna_tier2_shared, 
+      ~BM_RATING, min = 0, max = 5, step = 1, ticks = T)
 
   ),
   list(
-    crosstalk::filter_select("BM_EVIDENCE_TYPE", "Evidence type", variants_tier2_shared, ~BM_EVIDENCE_TYPE),
-    crosstalk::filter_select("BM_EVIDENCE_LEVEL", "Evidence level", variants_tier2_shared, ~BM_EVIDENCE_LEVEL),
-    crosstalk::filter_select("BM_THERAPEUTIC_CONTEXT", "Therapeutic context", variants_tier2_shared, ~BM_THERAPEUTIC_CONTEXT),
-    crosstalk::filter_select("SEGMENT_ID", "Segment identifier", variants_tier2_shared, ~SEGMENT_ID)
+    crosstalk::filter_select(
+      "BM_EVIDENCE_TYPE", "Evidence type", 
+      cna_tier2_shared, ~BM_EVIDENCE_TYPE),
+    crosstalk::filter_select(
+      "BM_EVIDENCE_LEVEL", "Evidence level", 
+      cna_tier2_shared, ~BM_EVIDENCE_LEVEL),
+    crosstalk::filter_select(
+      "BM_EVIDENCE_DIRECTION", "Evidence direction", 
+      cna_tier2_shared, ~BM_EVIDENCE_DIRECTION),
+    crosstalk::filter_select(
+      "BM_THERAPEUTIC_CONTEXT", "Therapeutic context", 
+      cna_tier2_shared, ~BM_THERAPEUTIC_CONTEXT)
   )
 )
 
@@ -101,41 +114,45 @@ crosstalk::bscols(
 ```
 
 
-```{r tier2_scna_missing_filters, echo=F, results = 'asis', eval = NROW(pcg_report$content$cna$disp$tier2) == 0}
-cat('\n*  <i> <font style="font-size: 110%"><b>No</b> somatic copy-number aberrations of potential clinical significance found.</font></i>',sep='\n')
+```{r tier2_scna_missing_filters, echo=F, results = 'asis', eval = pcg_report$content$cna$vstats$n_tier2 == 0}
+cat('\n*  <i> <font style="font-size: 110%"><b>No</b> somatic copy-number aberrations of strong clinical significance found.</font></i>', sep = '\n')
 cat('\n')
 ```
 
 
-### Tier 2  - variant evidence items {data-padding=15}
+### Tier 2 - variant evidence items {data-padding=15}
 
 <br><br>
 
 
-```{r table_scna_tier2, eval = NROW(pcg_report$content$cna$disp$tier2) > 0}
+```{r table_scna_tier2, eval = pcg_report$content$cna$vstats$n_tier2 > 0}
 
-variants_tier2_shared |>
-  DT::datatable(escape = F, 
-                extensions=c("Buttons","Responsive"), 
-                options=
-                  list(buttons = c('csv','excel'), 
-                       scrollCollapse = T, 
-                       pageLength = 8,
-                       scrollY = scrollY_flexdb_container,
-                       ##autoWidth = T, 
-                       #fixedColumns = T,
-                       #fixedHeader = T,
-                       scrollX = "900px",
-                       #columnDefs = list(list(width = '90px', targets = c(1,2,3,4,5,6))),
-                       dom = 'Bfrtip')) |>
-  DT::formatStyle('BM_EVIDENCE_LEVEL', 
-                 backgroundColor = DT::styleEqual(c('A: Validated','A: FDA/NCCN/ELN guidelines','B: Clinical evidence','B1: Clinical evidence: late trials','B2: Clinical evidence: early trials','C: Case study','D: Preclinical evidence','E: Indirect evidence'), c("#009E73","#009E73","#56B4E9", "#56B4E9","#56B4E9","#0072B2","#E69F00", "#F0E442")))
+cna_tier2_shared |>
+  DT::datatable(
+    escape = F, 
+    extensions = c("Buttons","Responsive"), 
+    options = list(
+      buttons = c('csv','excel'), 
+      scrollCollapse=T, 
+      scrollY = scrollY_flexdb_container,
+      fixedColumns = T,
+      fixedHeader = T,
+      scrollX = "900px",
+      columnDefs = list(
+        list(
+          width = '90px', targets = c(1,2,3,4,5,6))),
+      dom = 'Bfrtip')) |>
+  DT::formatStyle(
+    'BM_EVIDENCE_LEVEL', 
+    backgroundColor = DT::styleEqual(
+      pcgrr::color_palette$clinical_evidence$levels,
+      pcgrr::color_palette$clinical_evidence$values))
 
 ```
 
 
-```{r tier2_scna_missing_data, echo=F, results = 'asis', eval = NROW(pcg_report$content$cna$disp$tier2) == 0}
-cat('\n*  <i> <font style="font-size: 110%"><b>No</b> somatic copy-number aberrations of potential clinical significance found.</font></i>',sep='\n')
+```{r tier2_scna_missing_data, echo=F, results = 'asis', eval = pcg_report$content$cna$vstats$n_tier2 == 0}
+cat('\n*  <i> <font style="font-size: 110%"><b>No</b> somatic copy-number aberrations of strong clinical significance found.</font></i>',sep='\n')
 cat('\n')
 ```
 
