--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_overview.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_overview.Rmd
@@ -10,25 +10,36 @@ Row
 
 ```{r}
 flexdashboard::valueBox("SNVs/InDels", caption = NULL, color = '#000000', icon = NULL)
+
+report_color <- pcgrr::color_palette$report_color$values[1]
+if(as.logical(pcg_report$settings$conf$assay_properties$vcf_tumor_only) == TRUE){
+  report_color <- pcgrr::color_palette$report_color$values[2]
+}
 ```
 
 ### Total variants
 
 ```{r}
-flexdashboard::valueBox(pcg_report$content$snv_indel$vstats$n, color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(
+  pcg_report$content$snv_indel$vstats$n, 
+  color = report_color, icon = "fa-dna")
 ```
 
 
 ### SNVs
 
 ```{r}
-flexdashboard::valueBox(pcg_report$content$snv_indel$vstats$n_snv, color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(
+  pcg_report$content$snv_indel$vstats$n_snv, 
+  color = report_color, icon = "fa-dna")
 ```
 
 ### InDels
 
 ```{r}
-flexdashboard::valueBox(pcg_report$content$snv_indel$vstats$n_indel, color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(
+  pcg_report$content$snv_indel$vstats$n_indel, 
+  color = report_color, icon = "fa-dna")
 ```
 
 ### TIER 1 variants
@@ -38,8 +49,9 @@ tier1 <- pcg_report$content$snv_indel$vstats$n_tier1
 flexdashboard::valueBox(
   tier1, color = ifelse(
     tier1 > 0,
-    pcg_report$settings$conf$visual_reporting$color_palette$success$values[1],
-    pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription", href="#tier-1")
+    pcgrr::color_palette$success,
+    pcgrr::color_palette$none), 
+  icon = "fa-file-prescription", href="#tier-1")
 ```
 
 ### TIER 2 variants
@@ -49,8 +61,9 @@ tier2 <- pcg_report$content$snv_indel$vstats$n_tier2
 flexdashboard::valueBox(
   tier2, color = ifelse(
     tier2 > 0,
-    pcg_report$settings$conf$visual_reporting$color_palette$success$values[1],
-    pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription", href="#tier-2")
+    pcgrr::color_palette$success,
+    pcgrr::color_palette$none), 
+  icon = "fa-file-prescription", href="#tier-2")
 ```
 
 
@@ -62,27 +75,27 @@ Row {data-height=300}
 
 <br>
 
-* <font style="color:white; font-size: 125%; font-weight: bold; background-color:`r pcg_report$settings$conf$visual_reporting[['color_palette']][['tier']][['values']][1]`"><a class="tierlink"  href="#tier-1">&nbsp;TIER 1&nbsp;&nbsp;</font></a> <b><font style="font-size: 125%">:&nbsp;`r pcg_report$content$snv_indel$vstats$n_tier1`</font></b><br>
+* <font style="color:white; font-size: 125%; font-weight: bold; background-color:`r pcgrr::color_palette$tier$values[1]`"><a class="tierlink"  href="#tier-1">&nbsp;TIER 1&nbsp;&nbsp;</font></a> <b><font style="font-size: 125%">:&nbsp;`r pcg_report$content$snv_indel$vstats$n_tier1`</font></b><br>
 
-* <font style="color:white; font-size: 125%; font-weight: bold; background-color:`r pcg_report$settings$conf$visual_reporting[['color_palette']][['tier']][['values']][2]`"><a class="tierlink"  href="#tier-2">&nbsp;TIER 2&nbsp;&nbsp;</font></a> <b><font style="font-size: 125%">:&nbsp;`r pcg_report$content$snv_indel$vstats$n_tier2`</font></b><br>
+* <font style="color:white; font-size: 125%; font-weight: bold; background-color:`r pcgrr::color_palette$tier$values[2]`"><a class="tierlink"  href="#tier-2">&nbsp;TIER 2&nbsp;&nbsp;</font></a> <b><font style="font-size: 125%">:&nbsp;`r pcg_report$content$snv_indel$vstats$n_tier2`</font></b><br>
 
-* <font style="color:white; font-size: 125%; font-weight: bold; background-color:`r pcg_report$settings$conf$visual_reporting[['color_palette']][['tier']][['values']][3]`"><a class="tierlink"  href="#tier-3">&nbsp;TIER 3&nbsp;&nbsp;</font></a> <b><font style="font-size: 125%">:&nbsp;`r pcg_report$content$snv_indel$vstats$n_tier3`</font></b><br>
+* <font style="color:white; font-size: 125%; font-weight: bold; background-color:`r pcgrr::color_palette$tier$values[3]`"><a class="tierlink"  href="#tier-3">&nbsp;TIER 3&nbsp;&nbsp;</font></a> <b><font style="font-size: 125%">:&nbsp;`r pcg_report$content$snv_indel$vstats$n_tier3`</font></b><br>
 
-* <font style="color:white; font-size: 125%; font-weight: bold; background-color:`r pcg_report$settings$conf$visual_reporting[['color_palette']][['tier']][['values']][4]`"><a class="tierlink"  href="#tier-4">&nbsp;TIER 4&nbsp;&nbsp;</font></a> <b><font style="font-size: 125%">:&nbsp;`r pcg_report$content$snv_indel$vstats$n_tier4`</font></b><br>
+* <font style="color:white; font-size: 125%; font-weight: bold; background-color:`r pcgrr::color_palette$tier$values[4]`"><a class="tierlink"  href="#tier-4">&nbsp;TIER 4&nbsp;&nbsp;</font></a> <b><font style="font-size: 125%">:&nbsp;`r pcg_report$content$snv_indel$vstats$n_tier4`</font></b><br>
 
-* <font style="color:white; font-size: 125%;font-weight: bold; background-color:`r pcg_report$settings$conf$visual_reporting[['color_palette']][['tier']][['values']][5]`"><a class="tierlink"  href="#tier-5">&nbsp;TIER 5&nbsp;&nbsp;</font></a> <b><font style="font-size: 125%">:&nbsp;`r pcg_report$content$snv_indel$vstats$n_tier5`</font></b>
+* <font style="color:white; font-size: 125%;font-weight: bold; background-color:`r pcgrr::color_palette$tier$values[5]`"><a class="tierlink"  href="#tier-5">&nbsp;TIER 5&nbsp;&nbsp;</font></a> <b><font style="font-size: 125%">:&nbsp;`r pcg_report$content$snv_indel$vstats$n_tier5`</font></b>
 
 
 ### Allelic support plot {data-padding=10}
 
 ```{r vaf_plot_prep1, echo=F}
 tumor_af_plot <- F
-if(NROW(pcg_report$content$snv_indel$callset$variant) > 0){
+if(NROW(pcg_report$content$snv_indel$callset$variant_display) > 0){
   if(NROW(dplyr::filter(
-    pcg_report$content$snv_indel$callset$variant, 
+    pcg_report$content$snv_indel$callset$variant_display, 
     !is.na(DP_TUMOR))) > 0 & 
      NROW(dplyr::filter(
-       pcg_report$content$snv_indel$callset$variant, 
+       pcg_report$content$snv_indel$callset$variant_display, 
        !is.na(AF_TUMOR))) > 0){
     tumor_af_plot <- T
   }
@@ -93,7 +106,7 @@ if(NROW(pcg_report$content$snv_indel$callset$variant) > 0){
 ```{r eval = tumor_af_plot}
 
 af_bin_df <- pcgrr::tier_af_distribution(
-  pcg_report$content$snv_indel$callset$variant)
+  pcg_report$content$snv_indel$callset$variant_display)
 af_bin_df$TIER <- factor(
   af_bin_df$TIER, 
   levels = c("TIER 1","TIER 2","TIER 3","TIER 4","TIER 5"))
@@ -103,8 +116,10 @@ p <- ggplot2::ggplot(data = af_bin_df) +
       mapping = ggplot2::aes(
         x = bin_name, y = Count, fill = TIER), 
       stat = "identity") +
-    ggplot2::scale_color_manual(values = pcg_report$settings$conf$visual_reporting$color_palette$tier$values) +
-    ggplot2::scale_fill_manual(values = pcg_report$settings$conf$visual_reporting$color_palette$tier$values) +
+    ggplot2::scale_color_manual(
+      values = pcgrr::color_palette$tier$values) +
+    ggplot2::scale_fill_manual(
+      values = pcgrr::color_palette$tier$values) +
     ggplot2::theme_classic() +
     ggplot2::ylab("Number of variants") +
     ggplot2::xlab("VAF - tumor") + 
@@ -137,12 +152,12 @@ The prioritization of SNV and InDels found in the tumor sample is done according
 - [**TIER 1: Variants of strong clinical significance**](#tier-1) - constitutes variants linked to predictive, prognostic, or diagnostic biomarkers in the [CIViC database](http://civic.genome.wustl.edu) and the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers) that are
 	 - Found within the same tumor type/class as specified by the user, **AND**
 	 - Of strong clinical evidence (i.e. part of guidelines, validated or discovered in late clinical trials ([CIViC evidence levels A/B](https://civic.readthedocs.io/en/latest/model/evidence/level.html)))
-	 - overlap between variants in the tumor sample and reported biomarkers must occur at the _exact variant level_ or at the _codon/exon level_
+	 - match between variants in the tumor sample and reported biomarkers must occur at the _exact genomic/amino acid level_ or at the _codon/exon level_
 	 
  - [**TIER 2: Variants of potential clinical significance**](#tier-2) - constitutes other variants linked to predictive, prognostic, or diagnostic biomarkers in the [CIViC database](http://civic.genome.wustl.edu) and the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers) that are either
 	 - Of strong clinical evidence in other tumor types/classes than the one associated with the query sample
 	 - Of weak clinical evidence (early trials, case reports etc. ([CIViC evidence levels C/D/E](https://civic.readthedocs.io/en/latest/model/evidence/level.html)))) in the same tumor type/class as the query sample
-	 - overlap between variants in the tumor sample and reported biomarkers must occur at the _exact variant level_ or at the _codon/exon level_
+	 - overlap between variants in the tumor sample and reported biomarkers must occur at the _exact genomic/amino acid level_ or at the _codon/exon level_
 	 
  - [**TIER 3: Variants of uncertain clinical significance**](#tier-3) - includes other coding variants found in oncogenes or tumor suppressor genes
    - Status as oncogenes and/or tumor suppressors genes are done according to the following scheme in PCGR:
@@ -157,7 +172,7 @@ The prioritization of SNV and InDels found in the tumor sample is done according
 Row
 -----------------------------------------------------
 
-### Global variant datatable - filters {data-padding=10 data-width=450}
+### Global variant datatable - filters {data-padding=15 data-width=400}
 
 The global variant datatable (right) can be filtered according to various criteria:
 <br>
@@ -167,36 +182,32 @@ The global variant datatable (right) can be filtered according to various criter
 
 <br>
 
-```{r table_browse_allelic_depth, echo=F, results = "asis", eval = NROW(pcg_report[['content']][['snv_indel']][['variant_set']][['tsv']]) > 0}
+```{r table_browse_allelic_depth, echo=F, results = "asis", eval = NROW(pcg_report$content$snv_indel$callset$variant_display) > 0}
 
-if(NROW(pcg_report[['content']][['snv_indel']][['callset']][['variant']]) > 2000){
+vars <- pcg_report$content$snv_indel$callset$variant_display
+  
+if(NROW(pcg_report$content$snv_indel$callset$variant_display) > 4000){
   cat('<b>NOTE - listing top 2000 variants</b><br>',sep="\n")
   cat('<br>')
-  pcg_report[['content']][['snv_indel']][['callset']][['variant']] <- head(pcg_report[['content']][['snv_indel']][['callset']][['variant']], 2000)
+  vars <- pcg_report$content$snv_indel$callset$variant_display <- head(pcg_report$content$snv_indel$callset$variant_display, 4000)
 }
-
-
-vars <- pcg_report[['content']][['snv_indel']][['callset']][['variant']] |> 
-  dplyr::select(SYMBOL, CONSEQUENCE, PROTEIN_CHANGE, TIER, VARIANT_CLASS,
-                GENOMIC_CHANGE, GENOME_VERSION, DP_TUMOR, 
-                AF_TUMOR, CALL_CONFIDENCE, DP_CONTROL, AF_CONTROL) |>
-  dplyr::mutate(CONSEQUENCE = stringr::str_replace_all(CONSEQUENCE,"&",","))
 
 tiers <- c('TIER 1','TIER 2','TIER 3','TIER 4','TIER 5')
 
-vars <- pcg_report[['content']][['snv_indel']][['callset']][['variant']] |> 
+vars <- pcg_report$content$snv_indel$callset$variant_display |>
   dplyr::select(
     dplyr::any_of(
       c("SYMBOL", "CONSEQUENCE", "PROTEIN_CHANGE", 
         "VARIANT_CLASS", "TIER", "GENOMIC_CHANGE", 
-        "GENOME_VERSION", "CALL_CONFIDENCE", "DP_TUMOR", 
+        "GENOME_VERSION", "ONCOGENICITY", 
+        "CALL_CONFIDENCE", "DP_TUMOR", 
         "AF_TUMOR", "DP_CONTROL", "AF_CONTROL")
       )) |>
-  dplyr::mutate(
-    CONSEQUENCE = stringr::str_replace_all(CONSEQUENCE,"&",",")) |>
+  dplyr::arrange(TIER) |>
   dplyr::mutate(
     TIER = paste0("TIER ", TIER)
-  )
+  ) 
+  
 
 variants_shared <- crosstalk::SharedData$new(vars)
 
@@ -207,13 +218,15 @@ filter_set2 <- list()
 filter_set1[[1]] <- crosstalk::filter_select(
   "TIER", "Tier", variants_shared, ~TIER)
 filter_set2[[1]] <- crosstalk::filter_select(
-  "CONSEQUENCE", "Consequence", variants_shared, ~CONSEQUENCE)
+  "CONSEQUENCE", "Consequence", 
+  variants_shared, ~CONSEQUENCE)
 
 i_set1 <- 2
 i_set2 <- 2
 if(any(!is.na(vars$CALL_CONFIDENCE))){
   filter_set1[[i_set1]] <- crosstalk::filter_select(
-    "CALL_CONFIDENCE", "Call confidence", variants_shared, ~CALL_CONFIDENCE)
+    "CALL_CONFIDENCE", "Call confidence", 
+    variants_shared, ~CALL_CONFIDENCE)
   i_set1 <- i_set1 + 1
 }
 if(any(!is.na(vars$DP_TUMOR)) & any(!is.na(vars$AF_TUMOR))){
@@ -228,7 +241,8 @@ if(any(!is.na(vars$DP_TUMOR)) & any(!is.na(vars$AF_TUMOR))){
   i_set2 <- i_set2 + 1
 }
 if(any(!is.na(vars$DP_CONTROL)) & any(!is.na(vars$AF_CONTROL))){
-  filter_set1[[i_set1]] <- crosstalk::filter_slider(
+  filter_set1[[i_set1]] <- 
+    crosstalk::filter_slider(
     "DP_CONTROL", "Sequencing depth control", 
     variants_shared, ~DP_CONTROL, ticks = F, sep = F)
   filter_set2[[i_set2]] <- crosstalk::filter_slider(
@@ -247,36 +261,26 @@ crosstalk::bscols(
 
 ### Global variant datatable {data-padding=15}
 
-```{r table_browse, eval = NROW(pcg_report[['content']][['snv_indel']][['variant_set']][['tsv']]) > 0}
+```{r table_browse, eval = NROW(pcg_report$content$snv_indel$callset$variant_display) > 0}
 
 tiers <- c('TIER 1','TIER 2','TIER 3','TIER 4','TIER 5')
 
 variants_shared |>
   DT::datatable(
-    extensions=c("Buttons","Responsive"),
-    #plugins = "scrollResize",
+    extensions = c("Buttons","Responsive"),
     options = list(buttons = c('csv','excel'),  
                  pageLength = 8, 
-                 ##autoWidth = T, 
-                 #width = "100%",
-                 #fixedColumns = T,
-                 #fixedHeader = T,
-                 #autoWidth = TRUE,
-                  #columnDefs = list(list(width = '80px', targets = c(1,3,4)))
                  scrollX = "900px",
                  scrollCollapse = T,
                  scrollY = scrollY_flexdb_container,
-                  #columnDefs = list(list(width = '6%', targets = c(1,3,4,5)),
-                  #                  list(width = '12%', targets = c(2,6))),
-                  # columnDefs = list(list(width = '80px', targets = c(1,3,4)),
-                  #                   list(width = '90px', targets = 6),
-                  #                   list(width = '40px', targets = 2),
-                  #                   list(width = '40px', targets = 5)),
                  dom = 'Bfrtip')
   ) |>
-   DT::formatStyle('TIER',color = 'white', 
-                   backgroundColor = DT::styleEqual(tiers, head(pcg_report$settings$conf$visual_reporting$color_palette[['tier']][['values']],5)), 
-                   fontWeight = 'bold', `text-align` = 'center')
+   DT::formatStyle(
+     'TIER',color = 'white', 
+     backgroundColor = DT::styleEqual(
+       tiers, 
+       head(pcgrr::color_palette[['tier']][['values']],5)), 
+     fontWeight = 'bold', `text-align` = 'center')
 
 
 ```
