--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_tier2.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_tier2.Rmd
@@ -8,64 +8,65 @@ Row
 ### SNVs and InDels
 
 ```{r}
-flexdashboard::valueBox("TIER 2", caption = NULL, color = '#000000', icon = NULL)
+flexdashboard::valueBox(
+  "TIER 2", caption = NULL, color = '#000000', icon = NULL)
 ```
 
 ### Biomarker genes
 
 ```{r}
-# flexdashboard::valueBox(stringr::str_replace_all(pcg_report$content$value_box$tier2,"Tier 2 variants:\n",""), color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
-
-tier2_evidence_items <- dplyr::bind_rows(pcg_report$content$snv_indel$clin_eitem$query_ttype$diagnostic$C_D_E,
-                                       pcg_report$content$snv_indel$clin_eitem$other_ttype$diagnostic$A_B,
-                                       pcg_report$content$snv_indel$clin_eitem$query_ttype$prognostic$C_D_E,
-                                       pcg_report$content$snv_indel$clin_eitem$other_ttype$prognostic$A_B,
-                                       pcg_report$content$snv_indel$clin_eitem$query_ttype$predictive$C_D_E,
-                                       pcg_report$content$snv_indel$clin_eitem$other_ttype$predictive$A_B)
-
-
-
-flexdashboard::valueBox(length(unique(tier2_evidence_items$SYMBOL)), color = pcg_report$settings$conf$visual_reporting$color_value_box)
+flexdashboard::valueBox(
+  pcg_report$content$snv_indel$vstats$n_genes_tier2, 
+  color = pcg_report$settings$conf$report_color)
 
 ```
 
 ### Biomarker variants
 
 ```{r}
-flexdashboard::valueBox(pcg_report$content$snv_indel$vstats$n_tier2, color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(
+  pcg_report$content$snv_indel$vstats$n_tier2, 
+  color = pcg_report$settings$conf$report_color,
+  icon = "fa-dna")
 ```
+
 
 
 ### Diagnostic evidence items
 
 ```{r}
-entries_diagnostic <- NROW(pcg_report$content$snv_indel$clin_eitem$query_ttype$diagnostic$C_D_E) +
-                      NROW(pcg_report$content$snv_indel$clin_eitem$other_ttype$diagnostic$A_B)
-flexdashboard::valueBox(entries_diagnostic, color = ifelse(entries_diagnostic > 0,
-                        "#00a65a",
-                        pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription")
+flexdashboard::valueBox(
+  pcg_report$content$snv_indel$vstats$n_eitems_diagnostic_tier2, 
+  color = ifelse(
+    pcg_report$content$snv_indel$vstats$n_eitems_diagnostic_tier2 > 0,
+    pcgrr::color_palette$success,
+    pcgrr::color_palette$none), 
+  icon = "fa-file-prescription")
 ```
 
 ### Prognostic evidence items
 
 ```{r}
-entries_prognostic <- NROW(pcg_report$content$snv_indel$clin_eitem$query_ttype$prognostic$C_D_E) +
-                      NROW(pcg_report$content$snv_indel$clin_eitem$other_ttype$prognostic$A_B)
-flexdashboard::valueBox(entries_prognostic, color = ifelse(entries_prognostic > 0,
-                        "#00a65a",
-                        pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription")
+flexdashboard::valueBox(
+  pcg_report$content$snv_indel$vstats$n_eitems_prognostic_tier2, 
+  color = ifelse(
+    pcg_report$content$snv_indel$vstats$n_eitems_prognostic_tier2 > 0,
+    pcgrr::color_palette$success,
+    pcgrr::color_palette$none), 
+  icon = "fa-file-prescription")
 ```
 
 ### Predictive evidence items
 
 ```{r}
-entries_predictive <- NROW(pcg_report$content$snv_indel$clin_eitem$query_ttype$predictive$C_D_E) +
-                      NROW(pcg_report$content$snv_indel$clin_eitem$other_ttype$predictive$A_B)
-flexdashboard::valueBox(entries_predictive, color = ifelse(entries_predictive > 0,
-                        "#00a65a",
-                        pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription")
+flexdashboard::valueBox(
+  pcg_report$content$snv_indel$vstats$n_eitems_predictive_tier2, 
+  color = ifelse(
+    pcg_report$content$snv_indel$vstats$n_eitems_predictive_tier2 > 0,
+    pcgrr::color_palette$success,
+    pcgrr::color_palette$none), 
+  icon = "fa-file-prescription")
 ```
-
 
 Row
 -----------------------------------------------------
@@ -78,29 +79,75 @@ Row
 
 cat('\nEvidence items associated with variants in TIER 2 (right panel) can be interactively explored according to various criteria\n:')
 
-variants_tier2 <- dplyr::bind_rows(
-  pcg_report[['content']][['snv_indel']][['clin_eitem']][['query_ttype']][['diagnostic']][['C_D_E']],
-  pcg_report[['content']][['snv_indel']][['clin_eitem']][['query_ttype']][['predictive']][['C_D_E']],
-  pcg_report[['content']][['snv_indel']][['clin_eitem']][['query_ttype']][['diagnostic']][['C_D_E']],
-  pcg_report[['content']][['snv_indel']][['clin_eitem']][['other_ttype']][['diagnostic']][['A_B']],
-  pcg_report[['content']][['snv_indel']][['clin_eitem']][['other_ttype']][['predictive']][['A_B']],
-  pcg_report[['content']][['snv_indel']][['clin_eitem']][['other_ttype']][['prognostic']][['A_B']]) |>
-  dplyr::arrange(BM_EVIDENCE_LEVEL, RATING)
+var_eitems_tier2 <- 
+  pcg_report$content$snv_indel$callset$variant_display |>
+  dplyr::filter(!is.na(.data$TIER) & TIER == 2) |>
+  dplyr::select(-c("TIER_DESCRIPTION")) |>
+  dplyr::inner_join(
+    pcg_report$content$snv_indel$callset$biomarker_evidence$items,
+    by = c("VAR_ID","TIER","VARIANT_CLASS","ENTREZGENE")
+  ) |>
+  dplyr::filter(.data$BM_RESOLUTION != "gene") |>
+  dplyr::distinct() |>
+  dplyr::select(
+    dplyr::any_of(
+      pcgrr::dt_display$var_eitem))
 
-variants_tier2_shared <- crosstalk::SharedData$new(variants_tier2)
+var_eitems_tier2_shared <- crosstalk::SharedData$new(
+  var_eitems_tier2)
+
+
 crosstalk::bscols(
   list(
-    crosstalk::filter_select("BM_CANCER_TYPE", "Cancer type", variants_tier2_shared, ~BM_CANCER_TYPE),
-    crosstalk::filter_select("BM_CLINICAL_SIGNIFICANCE", "Clinical significance", variants_tier2_shared, ~BM_CLINICAL_SIGNIFICANCE),
-    crosstalk::filter_select("BM_EVIDENCE_LEVEL", "Evidence level", variants_tier2_shared, ~BM_EVIDENCE_LEVEL),
-    crosstalk::filter_slider("RATING", "Rating", variants_tier2_shared, ~RATING, min = 0, max = 5, step = 1, ticks = T)
+    crosstalk::filter_select(
+      "BM_CANCER_TYPE", 
+      "Cancer type", 
+      var_eitems_tier2_shared, 
+      ~BM_CANCER_TYPE),
+    crosstalk::filter_select(
+      "BM_CLINICAL_SIGNIFICANCE", 
+      "Clinical significance", 
+      var_eitems_tier2_shared, 
+      ~BM_CLINICAL_SIGNIFICANCE),
+    crosstalk::filter_select(
+      "BM_EVIDENCE_LEVEL", 
+      "Evidence level", 
+      var_eitems_tier2_shared, 
+      ~BM_EVIDENCE_LEVEL),
+    crosstalk::filter_select(
+      "BM_EVIDENCE_DIRECTION", 
+      "Evidence direction", 
+      var_eitems_tier2_shared, 
+      ~BM_EVIDENCE_DIRECTION),
+    crosstalk::filter_slider(
+      "BM_RATING", 
+      "Rating", 
+      var_eitems_tier2_shared, 
+      ~BM_RATING, 
+      min = 0, max = 5, step = 1, ticks = T)
 
   ),
   list(
-    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_tier2_shared, ~CONSEQUENCE),
-    crosstalk::filter_select("BM_EVIDENCE_TYPE", "Evidence type", variants_tier2_shared, ~BM_EVIDENCE_TYPE),
-    crosstalk::filter_select("BIOMARKER_MAPPING", "Biomarker mapping", variants_tier2_shared, ~BIOMARKER_MAPPING),
-    crosstalk::filter_select("BM_THERAPEUTIC_CONTEXT", "Therapeutic context", variants_tier2_shared, ~BM_THERAPEUTIC_CONTEXT)
+    crosstalk::filter_select(
+      "CONSEQUENCE", 
+      "Consequence", 
+      var_eitems_tier2_shared, 
+      ~CONSEQUENCE),
+    crosstalk::filter_select(
+      "BM_EVIDENCE_TYPE", 
+      "Evidence type", 
+      var_eitems_tier2_shared, 
+      ~BM_EVIDENCE_TYPE),
+    crosstalk::filter_select(
+      "BM_RESOLUTION", 
+      "Biomarker resolution", 
+      var_eitems_tier2_shared, 
+      ~BM_RESOLUTION),
+    crosstalk::filter_select(
+      "BM_THERAPEUTIC_CONTEXT", 
+      "Therapeutic context", 
+      var_eitems_tier2_shared, 
+      ~BM_THERAPEUTIC_CONTEXT)
   )
 )
 
@@ -110,10 +157,10 @@ htmltools::br()
 
 ```{r biomarker_note2, echo=F, results = "asis", include = pcg_report$content$snv_indel$vstats$n_tier2 > 0}
 
-cat('<b>NOTE:</b> Reported biomarkers in CIViC/CGI are mapped at different resolutions (i.e. filter <b>Biomarker mapping</b>). The accuracy of a match between variants in the tumor sample and the reported biomarkers will vary accordingly (highlighted by gene symbols with different color backgrounds):\n\n')
+cat('<b>NOTE:</b> Reported biomarkers in CIViC/CGI are mapped at different resolutions (i.e. filter <b>Biomarker resolution</b>). The accuracy of a match between variants in the tumor sample and the reported biomarkers will vary accordingly (highlighted by gene symbols with different color backgrounds):\n\n')
 
-cat('<ul><li>Biomarker match at the <mark style="background-color:black; font-weight:bold; color:white">exact variant/codon level</mark></li>')
-cat(paste0('<br><li>Biomarker match at the <mark style="background-color:', pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1],'; color:white; font-weight:bold">exon/gene level</mark></li></ul>\n'))
+cat('<ul><li>Biomarker match at the <mark style="background-color:black; font-weight:bold; color:white">genomic, amino acid or codon level</mark></li>')
+cat(paste0('<br><li>Biomarker match at the <mark style="background-color:', pcgrr::color_palette$warning,'; color:white; font-weight:bold">exon/gene level</mark></li></ul>\n'))
 
 htmltools::br()
 
@@ -132,30 +179,45 @@ cat('\n')
 
 ```{r table_tier2, eval = pcg_report$content$snv_indel$vstats$n_tier2 > 0}
 
-variants_tier2_shared |>
- DT::datatable(escape = F, 
-                extensions = c("Buttons","Responsive"), 
-                options = list(pageLength = 8, 
-                               scrollY = scrollY_flexdb_container, 
-                               buttons = c('csv','excel'), 
-                               #autoWidth = T, 
-                 fixedColumns = T,
-                 fixedHeader = T,
-                 width = "100%",
-                 scrollX = "900px",
-                  columnDefs = list(list(width = '90px', targets = c(1,2,3,4,5,6))),
-                               dom = 'Bfrtip')) |>
-  DT::formatStyle('BM_EVIDENCE_LEVEL', 
-                 backgroundColor = DT::styleEqual(c('A: Validated','A: FDA/NCCN/ELN guidelines','B: Clinical evidence','B1: Clinical evidence: late trials','B2: Clinical evidence: early trials','C: Case study','D: Preclinical evidence','E: Indirect evidence'), c("#009E73","#009E73","#56B4E9", "#56B4E9","#56B4E9","#0072B2","#E69F00", "#F0E442"))) |>
-  DT::formatStyle(color="white", "SYMBOL", "BIOMARKER_MAPPING", fontWeight = 'bold', `text-align` = 'center',
-                  backgroundColor = DT::styleEqual(c('exact','codon','exon','gene'), 
-                                                   c('#000','#000',pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1],
-                                                     pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1])))
+warning_color <- 
+  pcgrr::color_palette$warning
 
-```
-
-```{r tier2_missing_data, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$vstats$n_tier2 == 0}
-cat('\n*  <i> <font style="font-size: 110%"><b>No</b> variants of potential clinical significance found.</font></i>', sep = '\n')
-cat('\n')
+var_eitems_tier2_shared |>
+  DT::datatable(
+    escape = F, 
+    extensions = c("Buttons","Responsive"), 
+    options = list(
+      pageLength = 8, 
+      scrollY = scrollY_flexdb_container, 
+      buttons = c('csv','excel'), 
+      fixedColumns = T,
+      fixedHeader = T,
+      width = "100%",
+      scrollX = "900px",
+      columnDefs = list(
+        list(width = '90px', targets = c(1,2,3,4,5,6))),
+                 dom = 'Bfrtip')) |>
+  DT::formatStyle(
+    'BM_EVIDENCE_LEVEL', 
+    backgroundColor = DT::styleEqual(
+      pcgrr::color_palette$clinical_evidence$levels,
+      pcgrr::color_palette$clinical_evidence$values)) |>
+  DT::formatStyle(
+    color="white", 
+    "SYMBOL", 
+    "BM_RESOLUTION", 
+    fontWeight = 'bold', 
+    `text-align` = 'center',
+    backgroundColor = DT::styleEqual(
+      c('genomic',
+        'hgvsp',
+        'codon',
+        'exon',
+        'gene'), 
+      c('#000',
+        '#000',
+        '#000',
+        warning_color, 
+        warning_color)))
 ```
 
