--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_tier4.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_tier4.Rmd
@@ -9,17 +9,26 @@ n_tier4_snv <- 0
 n_tier4_indel <- 0
 n_tier4_block <- 0
 
-if(NROW(pcg_report$content$snv_indel$variant_set$tsv) > 0){
-  n_tier4_snv <- pcg_report$content$snv_indel$variant_set$tsv |>
-    dplyr::filter(VARIANT_CLASS == "SNV" & TIER == "TIER 4") |> 
+if(NROW(pcg_report$content$snv_indel$callset$variant_display) > 0){
+  n_tier4_snv <- 
+    pcg_report$content$snv_indel$callset$variant_display |>
+    dplyr::filter(.data$VARIANT_CLASS == "SNV" & 
+                  !is.na(.data$TIER) & 
+                  .data$TIER == 4) |> 
     nrow()
-  n_tier4_indel <- pcg_report$content$snv_indel$variant_set$tsv |> 
-    dplyr::filter((VARIANT_CLASS == "insertion" | 
-                     VARIANT_CLASS == "deletion" | 
-                     VARIANT_CLASS == "indel") & TIER == "TIER 4") |>
+  n_tier4_indel <- 
+    pcg_report$content$snv_indel$callset$variant_display |> 
+    dplyr::filter((.data$VARIANT_CLASS == "insertion" | 
+                     .data$VARIANT_CLASS == "deletion" | 
+                     .data$VARIANT_CLASS == "indel") & 
+                    !is.na(.data$TIER) &
+                    .data$TIER == 4) |>
     nrow()
-  n_tier4_block <-  pcg_report$content$snv_indel$variant_set$tsv |> 
-    dplyr::filter(VARIANT_CLASS == "substitution" & TIER == "TIER 4") |> 
+  n_tier4_block <- 
+    pcg_report$content$snv_indel$callset$variant_display |> 
+    dplyr::filter(.data$VARIANT_CLASS == "substitution" & 
+                    !is.na(.data$TIER) &
+                    .data$TIER == 4) |> 
     nrow()
 }
 
@@ -28,32 +37,45 @@ if(NROW(pcg_report$content$snv_indel$variant_set$tsv) > 0){
 ### SNVs and InDels
 
 ```{r}
-flexdashboard::valueBox("TIER 4", caption = NULL, color = '#000000', icon = NULL)
+flexdashboard::valueBox(
+  "TIER 4", caption = NULL, color = '#000000', icon = NULL)
 ```
 
 
 ### Total variants
 
 ```{r}
-flexdashboard::valueBox(pcg_report$content$snv_indel$vstats$n_tier4, color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(
+  pcg_report$content$snv_indel$vstats$n_tier4, 
+  color = pcg_report$settings$conf$report_color, 
+  icon = "fa-dna")
 ```
 
 ### SNVs
 
 ```{r}
-flexdashboard::valueBox(as.character(n_tier4_snv), color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(
+  as.character(n_tier4_snv), 
+  color = pcg_report$settings$conf$report_color, 
+  icon = "fa-dna")
 ```
 
 ### InDels
 
 ```{r}
-flexdashboard::valueBox(as.character(n_tier4_indel), color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(
+  as.character(n_tier4_indel), 
+  color = pcg_report$settings$conf$report_color, 
+  icon = "fa-dna")
 ```
 
 ### Block substitutions
 
 ```{r}
-flexdashboard::valueBox(as.character(n_tier4_block), color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(
+  as.character(n_tier4_block), 
+  color = pcg_report$settings$conf$report_color, 
+  icon = "fa-dna")
 ```
 
 
@@ -67,27 +89,35 @@ Row
 
 ```{r table_browse_tier4, echo=F, results = "asis", eval = pcg_report$content$snv_indel$vstats$n_tier4 > 0}
 
-if(NROW(pcg_report[['content']][['snv_indel']][["disp"]][['tier4']]) > 2000){
-  cat('<b>NOTE - only considering top 2000 variants (ranked according to Open Targets phenotype association score) </b><br>',sep="\n")
+tier4_vars <- 
+  pcg_report$content$snv_indel$callset$variant_display |>
+  dplyr::filter(
+    !is.na(.data$TIER) & 
+      .data$TIER == 4) |>
+  dplyr::select(
+    dplyr::any_of(
+      pcgrr::dt_display$tier4))
+  
+if(pcg_report$content$snv_indel$vstats$n_tier4 > 2000){
+  cat('<b>NOTE - only considering top 2000 variants (ranked according to oncogenicity and gene-cancer association score) </b><br>',sep="\n")
   cat('<br>')
-  pcg_report[['content']][['snv_indel']][["disp"]][['tier4']] <- 
-    head(pcg_report[['content']][['snv_indel']][["disp"]][['tier4']], 2000)
+  tier4_vars <- 
+    head(tier4_vars, 2000)
 }
 htmltools::br()
 
 cat('Variants in TIER 4 (right panel) can be interactively explored according to various criteria\n:')
 
-
-
-tier4_vars <- pcg_report[['content']][['snv_indel']][["disp"]][['tier4']]
-
 variants_tier4_shared <- crosstalk::SharedData$new(tier4_vars)
 
 crosstalk::bscols(
   list(
-    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_tier4_shared, ~CONSEQUENCE),
-    crosstalk::filter_select("SYMBOL", "Gene", variants_tier4_shared, ~SYMBOL),
-    crosstalk::filter_select("CHEMBL_COMPOUND_TERMS", "Targeted drugs", variants_tier4_shared, ~CHEMBL_COMPOUND_TERMS)
+    crosstalk::filter_select(
+      "CONSEQUENCE", "Consequence", 
+      variants_tier4_shared, ~CONSEQUENCE),
+    crosstalk::filter_select(
+      "SYMBOL", "Gene", 
+      variants_tier4_shared, ~SYMBOL)
   )
 )
 
@@ -107,19 +137,30 @@ cat('\n')
 
 ```{r table_tier4, eval = pcg_report$content$snv_indel$vstats$n_tier4 > 0}
 
-DT::datatable(variants_tier4_shared, escape=F,extensions=c("Buttons","Responsive"), 
-options=list(buttons = c('csv','excel'), 
-             scrollCollapse=T, 
-             scrollY = scrollY_flexdb_container,
-             #autoWidth = T, 
-                 fixedColumns = T,
-                 fixedHeader = T,
-             width = "100%",
-                 scrollX = "900px",
-                  columnDefs = list(list(width = '90px', targets = c(1,2,3,4,5,6))),
-             dom = 'Bfrtip')) |>
-  DT::formatStyle("SYMBOL","OPENTARGETS_RANK", color = "white", backgroundColor = DT::styleInterval(pcg_report[['content']][['report_display_config']][['opentargets_rank']][['breaks']], pcg_report[['content']][['report_display_config']][['opentargets_rank']][['colors']]))
-  
+DT::datatable(
+  variants_tier4_shared, 
+  escape = F,
+  extensions = c("Buttons","Responsive"), 
+  options = list(
+    buttons = c('csv','excel'), 
+    scrollCollapse=T, 
+    scrollY = scrollY_flexdb_container,
+    fixedColumns = T,
+    fixedHeader = T,
+    width = "100%",
+    scrollX = "900px",
+    columnDefs = list(list(
+      width = '90px', targets = c(1,2,3,4,5,6))),
+    dom = 'Bfrtip')) |>
+  DT::formatStyle(
+    "SYMBOL",
+    "GLOBAL_ASSOC_RANK", 
+    color = "white", 
+    backgroundColor = 
+      DT::styleInterval(
+        pcgrr::color_palette$cancer_assoc$breaks, 
+        pcgrr::color_palette$cancer_assoc$values))
+
 ```
 
 ```{r tier4_missing_data, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$vstats$n_tier4 == 0}
